@@ -34,19 +34,6 @@
 #  USA.
 #
 
-#$$CHANGE HISTORY#
-#****************************************************************************#
-#                                                                            #
-#                         C H A N G E  H I S T O R Y                         #
-#                                                                            #
-#****************************************************************************#
-
-# Date		Version	Description
-#------------------------------------------------------------------------
-# 090301	0.1.0	Makefile for OpenRISC debug proxy.             	jb
-#  2 Apr 09	0.1.1	Jeremy Bennett. Added static target
-#  1 May 09	0.1.3	Added specific make target for VPI		jb
-# 090828        0.1.4   Added ftdi_sio driver reload rule               jb
 
 #DBGCPPFLAGS=-DDEBUG_GDB=1
 #DBGCPPFLAGS=-DDEBUG_USB_DRVR_FUNCS=1
@@ -59,12 +46,11 @@ COMMON_LDFLAGS  =
 
 # Flags for static library
 STATIC_LIBDIR   = lib
-STATIC_LIB      = libftd2xx.a.0.4.16
+STATIC_LIB      = libftd2xx.a
 STATIC_LDFLAGS  = $(COMMON_LDFLAGS) $(STATIC_LIBDIR)/$(STATIC_LIB) \
-                  -lpthread -ldl
+                  -lrt -lpthread -ldl
 # Defines to enable certain endpoint handling functions to be used
 USB_FLAGS	   = -D USB_ENDPOINT_ENABLED=1
-VPI_FLAGS	   = -D VPI_ENDPOINT_ENABLED=1
 
 #Determine whether we're on Cygwin
 ifndef OSTYPE   
@@ -95,7 +81,6 @@ else
 			     src/FT2232cMpsseJtag.cpp \
 			     src/usb_functions.c \
 			     src/linux_usb_driver_calls.c
-	OR_DEBUG_PROXY_VPI_SRC = src/vpi_functions.c
 	CXX                = g++
 	CPPFLAGS           = $(COMMON_CPPFLAGS) $(DBGCPPFLAGS)
 	CXXFLAGS           = $(COMMON_CXXFLAGS)
@@ -106,7 +91,6 @@ endif
 APP             = or_debug_proxy
 APP_DYNAMIC = $(APP)$(EXE)
 APP_STATIC  = $(APP)_static$(EXE)
-APP_VPI     = $(APP)_vpi$(EXE)
 
 # -----------------------------------------------------------------------------
 # Build dynamic and static targets from scratch
@@ -114,8 +98,6 @@ APP_VPI     = $(APP)_vpi$(EXE)
 all: clean $(APP_DYNAMIC)
 
 static: clean $(APP_STATIC)
-
-vpi: clean $(APP_VPI)
 
 # Dynamic target
 $(APP_DYNAMIC): $(OR_DEBUG_PROXY_SRC) $(OR_DEBUG_PROXY_USB_SRC)
@@ -126,20 +108,16 @@ $(APP_STATIC): $(OR_DEBUG_PROXY_SRC) $(OR_DEBUG_PROXY_USB_SRC) $(STATIC_LIBDIR)/
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(USB_FLAGS) $+ $(STATIC_LDFLAGS) -o $@
 	cp $(APP_STATIC) $(APP)
 
-# VPI target only
-$(APP_VPI): $(OR_DEBUG_PROXY_SRC) $(OR_DEBUG_PROXY_VPI_SRC)
-	$(CXX) $(CPPFLAGS) $(VPI_FLAGS) $(CXXFLAGS) $+ -o $@
-
 # -----------------------------------------------------------------------------
 # Target for checking the static lib is in the place it should be
 $(STATIC_LIBDIR)/$(STATIC_LIB):
 	@echo
 	@echo "The static library, $(STATIC_LIB), is missing."
 	@echo "Please download the driver to build a statically linked version"
-	@echo "of this app. For Linux, try:"
-	@echo "\twget http://www.ftdichip.com/Drivers/D2XX/Linux/libftd2xx0.4.16.tar.gz"
-	@echo "\ttar xzf libftd2xx0.4.16.tar.gz"
-	@echo "\tcp libftd2xx0.4.16/static_lib/libftd2xx.a.0.4.16 lib"
+	@echo "of this app. For 32-bit Linux, try:"; echo
+	@echo "\twget http://www.ftdichip.com/Drivers/D2XX/Linux/libftd2xx1.0.4.tar.gz"
+	@echo "\ttar xzf libftd2xx1.0.4.tar.gz"
+	@echo "\tcp libftd2xx1.0.4/build/i386/libftd2xx.a lib"
 	@echo
 	@exit 1
 # -----------------------------------------------------------------------------
@@ -147,7 +125,6 @@ $(STATIC_LIBDIR)/$(STATIC_LIB):
 clean:
 	$(RM) $(APP_DYNAMIC)
 	$(RM) $(APP_STATIC)
-	$(RM) $(APP_VPI)
 	find ./ -name "*~" | xargs $(RM)
 
 ifneq ($(OSTYPE),cygwin)
